# HybridRL-FlightControl

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment-docker.yml  environment.yml  environmnet.yml  hello.py  noxfile.py  pyproject.toml  setup.py  to_test_environment.py
.github/workflows/: docker-image.yml  tests.yml
docs/: Makefile  conf.py  index.rst  make.bat
models/DSAC-citation/desert-fog-33/: SAC_best_policy.pt  config.yaml
models/DSAC-citation/smart-durian-34/: SAC_best_policy.pt  config.yaml
models/DSAC-citation/vague-hill-35/: SAC_best_policy.pt  config.yaml
models/custom_sac/: actor_sac  critic_1_sac  critic_2_sac  value_sac
notebooks/: best_algorithm.ipynb  best_obsevation.ipynb  best_reward.ipynb  best_task.ipynb
src/_data/: Tasks_episode.csv  best_algo_episode.csv  get_wandb_data.py  load_aircraft_data.py  make_dataset.py
src/agents/: __init__.py  base_agent.py  base_callback.py  base_logger.py  base_policy.py  buffer.py  callbacks.py  seres_dsac.py
src/agents/config/: __init__.py  config_dsac.py  config_idhp.py  config_idhp_dsac.py  config_idhp_sac.py  config_sac.py  config_sb3_sac.py  config_seres_dsac.py  config_td3.py
src/agents/dsac/: dsac.py  policy.py
src/agents/idhp/: __init__.py  agent.py  config_idhp.py  excitation.py  idhp.py  idhp_data.py  incremental_model.py  policy.py
src/agents/idhp_dsac/: idhp_dsac.py
src/agents/idhp_sac/: idhp_sac.py  policy.py
src/agents/sac/: buffer.py  config_sac.py  policy.py  sac.py
src/agents/seres_dsac/: __init__.py  base_agent.py  config_seres_dsac.py  experience_replay.py  mlp.py  seres_dsac_agent.py
src/agents/td3/: config_td3.py
src/data/: best_algo_episode.csv  best_algo_learning.csv  best_algo_v2_episode.csv  best_algo_v2_learning.csv  best_reward.csv  best_reward_episode.csv  best_reward_rollout.csv  best_reward_square_episode.csv  best_reward_square_learning.csv  citation-best-observation_episode.csv  citation-best-observation_learning.csv  get_best_reward_data.py  get_wandb_data.py  load_aircraft_data.py
src/envs/: __init__.py  base_env.py  observations.py  reference_signals.py  rewards.py
src/envs/citation/: citation_env.py
src/envs/config/: config_citation_env.py  config_lti_env.py  gym_env.py
src/experiments/: control_sp.py  core.py  exp0_verification_gym.py  exp1_idhp_sac_hyperparam.py  exp1_reference_signals.py  exp2_noise.py  exp3_fault.py  exp4_fault.py  exp4_stall.py  exp_best_algo.py  exp_best_algo.yaml  exp_best_algo_high.yaml  exp_dsac_citation.yaml  exp_dsac_gym.yaml  exp_dsac_lti.yaml  exp_dsac_lti_constant.yaml  exp_idhp_casper_params.yaml  exp_idhp_citation.yaml  exp_idhp_dsac_citation.yaml  exp_idhp_dsac_lti.yaml  exp_idhp_gamma.yaml  exp_idhp_hyperparameters.yaml  exp_idhp_learning.yaml  exp_idhp_sac_citation.yaml  exp_idhp_sac_lti.yaml  exp_idhp_sac_lti_constant.yaml  exp_idhp_test.yaml  exp_observations.py  exp_observations.yaml  exp_reward_square.py  exp_rewards.py  exp_rewards.yaml  exp_rewards_square.yaml  exp_sac_citation.yaml  exp_sac_gym.yaml  exp_sac_lti.yaml  exp_sac_lti_constant.yaml  exp_tasks.yaml  idhp_sac_hyperparam.py  lti_citation.py  (+3 more)
src/helpers/: callbacks.py  config.py  config_auto.py  misc.py  paths.py  sb3.py  signals.py  torch.py  torch_helpers.py  tracking.py  wandb_helpers.py
src/hrl_fc/: __main__.py  config.py  console.py  core.py  experiment_builder.py  experiment_config.py  experiment_runner.py
src/hrl_fcs/: __main__.py  core.py
src/hybridrl_flightcontrol/: __main__.py  experiment_builder.py  experiment_config.py  experiment_runner.py
src/models/: aircraft_environment.py  aircraft_model.py  observations.py  rewards.py  tasks.py
src/results/: download_wandb_data.py
src/sandbox/: dqn-torch.py  grid_world_policy_evaluation.py  ics_cleaning_robot.py  sac_pendulum.py  wandb_sb3.py
src/tasks/: __init__.py  all_tasks.py  attitude.py  base_task.py  experiment_1.py  experiment_4_stall.py  plot_task.py  sinusoidal.py
src/thesis_pilot/: __main__.py  aircraft_aoa_hold.py  aircraft_classic_control.py  config.py  core.py
src/visualization/: best_algo.py  utils.py
tests/helpers/: test_torch.py
tests/test_tasks/: test_all_tasks.py  test_attitude.py
tests/tests_agents/: test_base_agent.py
tests/tests_envs/: test_base_env.py
tests/tests_hrl_fc/: test_experiment_builder.py
(+116 files in other folders)
