
[tool.poetry]
name = "thesis_pilot"
version = "0.1.0"
description = "Preliminary work for my control systems with RL MSc thesis"
authors = ["lucas <lucas6eng@gmail.com>"]
license = "MIT"
include = [
    { path = "data", format = "sdist" },
    { path = "models", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
matplotlib = "^3.6.1"
pydantic = "^1.10.2"
nox = "^2022.8.7"
PyYAML = "^6.0"
rich = "^12.6.0"
pybullet = "^3.2.5"
wandb = "^0.13.5"
protobuf = "3.20"
gym = "0.21"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
prettier = "^0.0.7"
mypy = "^0.982"


[tool.mypy]
# strict = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = ["sandbox"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tp = "thesis_pilot.__main__:main"