[tool.poetry]
name = "HRL-FC"
version = "0.1.0"
description = "Preliminary work for my control systems with RL MSc thesis"
authors = ["lucas <lucas6eng@gmail.com>"]
license = "MIT"
include = [
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
gymnasium = {extras = ["classic-control"], version = "^0.27.1"}
pyyaml = "^6.0"
pydantic = "^1.10.6"
wandb = "^0.14.0"
tensorboard = "^2.12.0"
typer = "^0.7.0"
rich = "^13.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
prettier = "^0.0.7"
mypy = "^0.982"
nox = "^2022.8.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[tool.mypy]
# strict = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = ["sandbox"]

[tool.isort]
profile = "black"
force_single_line = false
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hrl = "hrl_fc.__main__:app"
