[project]
name = "hybridrl-flightcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage>=7.8.0",
    "gymnasium[classic-control]>=1.1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy==1.26",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.2",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rliable>=1.2.0",
    "seaborn>=0.13.2",
    "swig>=4.3.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "typer>=0.15.2",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "nox>=2025.2.9",
    "prettier>=0.0.7",
    "pytest>=8.3.5",
]

[project.scripts]
hrl = "hybridrl_flightcontrol.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
# strict = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = ["sandbox"]

[tool.isort]
profile = "black"
force_single_line = false
lines_after_imports = 2
